# somef

./: .cli.py.swp  .gitignore  .readthedocs.yml  CITATION.cff  Citation Classifier.xlsx  Description Classifier.xlsx  Dockerfile  Installation Classifier.xlsx  Invocation Classifier.xlsx  LICENSE  README.md  cli.py  code  codemeta.json  config.json  createExcerpts.py  createJSON.py  environment.yml  experiment.json  experiments.ipynb  fetchgithubmetadata.py  header_analysis.py  main.py  minegithubrepodescriptions.py  mkdocs.yml  output.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_out.ttl  testing.py  training.py  update_version.py
.github/: dependabot.yaml
.github/workflows/: action-test-before-PR.yml  docker-publish.yml  pypi-publish.yml
SM2KG-WebApp/: config.py  pleasetest.json  requirements.txt  requirements_alt.txt
SM2KG-WebApp/app/: __init__.py
SM2KG-WebApp/app/giturl_class/: .download_form.py.swp  .routes.py.swp  :w  __init__.py  classification_form.py  download_form.py  routes.py  test.json  testfile.txt  url_form.py
SM2KG-WebApp/data/: output.json  outputput.json  test.json
Wordnet/: Wordnet.ipynb
data/: citation.csv  description.csv  installation.csv  invocation.csv  none.csv  repos_summary.csv
data/repos/: hyvr-README.md
docs/: author.md  bibtext.md  bitbucket.md  bower.md  cabal.md  cargo.md  citationcff.md  codeberg.md  codemetajson.md  composer.md  condaenvironment.md  description.md  docker_file_doc.md  dockerfiledoc.md  gemspec.md  github.md  gitlab.md  index.md  install.md  julia.md  openaire.md  openalex.md  output.md  packagejson.md  pom.md  publiccode.md  pyprojecttoml.md  readmefile.md  requerimentstxt.md  setupcfg.md  setuppy.md  supported_languages.md  supported_metadata_files.md  usage.md
docs/stylesheets/: mkdocs.css
documentation/: approaches.md  links.csv
experiments/: Classifier Pipelines.ipynb  TFidf-Logistic.ipynb  create_models.py  readme.md  setup_corpus.py
experiments/header_analysis/: header.csv
experiments/header_analysis/header_evaluation/: headerEvaluation.py  header_evaluation_new.csv  header_evaluation_new_header_content.csv  header_evaluation_new_header_content_annotated.csv  header_evaluation_new_header_only.csv  header_evaluation_new_header_only_annotated.csv  header_evaluation_predicted_2021-07-04.csv  header_evaluation_predicted_2024-01-12.csv  header_evaluation_summary_2021-03-10.csv  header_evaluation_summary_2024-01-12.csv  header_evaluation_tmp.json  output_header_evaluation.py  readme.md
experiments/header_analysis/md_split/: common_name.csv  common_name_grouped.csv  md_section.csv
experiments/helper_scripts/: fetchgithubmetadata.py  gitmydoc.py
experiments/old_experiments/: Classifier Pipelines.ipynb  initial_baseline.ipynb
experiments/old_experiments/helper_scripts/: printprogressbar.py  splitcsvcategory.py
experiments/ranking/: citation_classifier.csv  description_classifier.csv  installation_classifier.csv  invocation_classifier.csv
experiments/trained_models/: citcvbb.p  citcvlr.p  citcvnb.p  cittfada.p  cittfdtc.p  cittflr.p  cittfnb.p  cittfper.p  cittfrfc.p  cittfsgd.p  cittfxgb.p  description.sk  descvbb.p  descvlr.p  descvnb.p  destfada.p  destfdtc.p  destflr.p  destfnb.p  destfper.p  destfrfc.p  destfsgd.p  destfxgb.p  inscvbb.p  inscvlr.p  inscvnb.p  instfada.p  instfdtc.p  instflr.p  instfnb.p  instfper.p  instfsgd.p  instfxgb.p  invcvbb.p  invcvlr.p  invcvnb.p  invtfada.p  invtfdtc.p  invtflr.p  invtfnb.p  (+4 more)
experiments/training_corpus/: citation.csv  count_distributions.py  description.csv  installation.csv  invocation.csv  none.csv
experiments/training_corpus/repos/: generator-arcgis-js-app-README.md  gitfolio-README.md  hyvr-README.md  vid2vid-README.md
helper_scripts/: githubrepo2readme.py  gitmydoc.py  minegithubrepodescriptions.py  splitcsvcategory.py  synthRepoData.py
models/: citation.sk  citcvlr.p  citcvnb.p  cittfnb.p  description.sk  descvbb.p  destfada.p  destfdtc.p  destfxgb.p  inscvnb.p  installation.sk  instfnb.p  instfper.p  instfrfc.p  instfsgd.p  invcvlr.p  invocation.sk  invtfdtc.p  invtflr.p  invtfxgb.p
notebook/: SOMEF Usage Example.ipynb  test.json
sm2kg/: MANIFEST.in  setup.py
sm2kg/sm2kg/: .requirements.txt.swp  README.md  cli.py  createJSON.py  requirements.txt  training.py
sm2kg/sm2kg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sm2kg/sm2kg/data/: citation.csv  description.csv  installation.csv  none.csv
sm2kg/sm2kg/documentation/: design.md  links.csv  objective.md
sm2kg/sm2kg/experiments/: TFidf-Logistic.ipynb  TFidf-NB.ipynb  setup_corpus.py
sm2kg/sm2kg/helper_scripts/: fetchgithubmetadata.py  splitcsvcategory.py
somef package/: README.md  setup.py
somef package/src/somef/: __init__.py  __main__.py  cli.py  configuration.py  data_to_graph.py  header_analysis.py
somef package/src/somef.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/somef/: __init__.py  __main__.py  cli.py  configuration.py  constants.py  createExcerpts.py  create_corpus_for_NER.py  data_to_graph.py  extract_ontologies.py  extract_software_type.py  extract_workflows.py  get_web_dependencies.py  headerEvaluation.py  header_analysis.py  header_evaluation_summary.csv  header_evalution.csv  mardown_parser.py  markdown_utils.py  parser_somef.py  process_files.py  process_repository.py  process_results.py  regular_expressions.py  somef_cli.py  sonarqube.py  supervised_classification  supervised_classification.py
src/somef.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/somef/evaluation/: create_header_corpus.py  header_evaluation_interactive.py  output_header_evaluation_summary.py  update_evaluation.py
src/somef/export/: data_to_graph.py  google_codemeta_export.py  json_export.py  turtle_export.py
src/somef/mapping/: rml.ttl  yarrrml.yml
src/somef/models/: citation.p  citation.sk  description.p  installation.p  (+1 more)
src/somef/test/test_data/repositories/gammalearn/: pyproject.toml
src/somef/test/test_data/repositories/soca/: README.md  codemeta.json  setup.cfg
(+321 files in other folders)
