[tool.poetry]
name = "somef"
version = "0.1.0"
description = ""
authors = ["Jenifer Tabita Ciuciu-Kiss <jenifer.tabita.ciuciu.kiss@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
bs4 = "^0.0.1"
click = "^8.1.7"
click-option-group = "^0.5.6"
matplotlib = "^3.8.2"
nltk = "^3.8.1"
numpy = "^1.26.3"
pandas = "^2.1.4"
rdflib = "^7.0.0"
textblob = "^0.17.1"
validators = "^0.22.0"
xgboost = "^2.0.3"
scipy = "^1.11.4"
inflect = "^7.0.0"
contractions = "^0.1.73"
chardet = "^5.2.0"
imbalanced-learn = "^0.11.0"
pytest = "^7.4.4"
morph-kgc = "^2.6.4"
bibtexparser = "^1.4.1"
nbformat = "^5.9.2"
markdown = "^3.5.2"
rdflib-jsonld = "^0.6.2"
requests = "^2.31.0"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
somef = "somef.__main__:cli"

[build-system]
requires = ["poetry-core>=1.1.10"]
build-backend = "poetry.core.masonry.api"