[metadata]
name = soca
version = attr: soca.__version__
author = Daniel Rodríguez Mariblanca, Miguel Arroyo Márquez, Esteban Gonzalez, Daniel Garijo
author_email = daniel.garijo@upm.es
description = A python package that given an organization/user name, it will create a software catalog for browsing all repositories or just a single repository in a minimalist card.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oeg-upm/soca
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.10.0
install_requires =
    somef >= 0.9.5
    requests
    bs4
    htmlmin
    progressbar2
    mistune
    Pygments
    html2image
    inspect4py
    click
    influxdb-client
    configparser
    DateTime
    pathlib
    nltk
    configparser
    influxdb_client
    validators

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    soca = soca.__main__:cli